--- a/Conhecimentos de programação/aula 12 exercicios/exercicio 014/modelo.html
+++ b/Conhecimentos de programação/aula 12 exercicios/exercicio 014/modelo.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do dia</title>
     <link rel="stylesheet" href="estilo.css">
-</head>
-<body onload="carregar()">
+  </head>
+  <body onload="carregar()">
     <header>
-        <h1>Hora do dia</h1>
+      <h1>Hora do dia</h1>
     </header>
     <section>
-        <div id="msg">
-            ""
-        </div>
-        <div id="foto">
-            <img id="imagem" src="manha.png" alt="foto do dia">
-        </div>
+      <div id="msg">
+        <!-- aqui será inserido a mensagem de saudação -->
+      </div>
+      <div id="foto">
+        <img id="imagem" src="manha.png" alt="foto do dia">
+      </div>
     </section>
     <footer>
-        <p>&copy; ACDSenterprises</p>
+      <p>&copy; ACDSenterprises</p>
     </footer>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
